Menu button align fix

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -30,12 +30,6 @@
   }
 
   &__menu-button {
-    font-family: Poppins, sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 30px;
-    color: #fff;
-    text-decoration: none;
     display: none;
     margin: auto;
 
